# miniGD

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  run.py  wsgi.py
app/: __init__.py  models.py
app/blueprints/auth/: __init__.py  resources.py  routes.py  services.py
app/blueprints/files/: __init__.py  resources.py  routes.py  service.py
app/blueprints/home/: __init__.py  resource.py  routes.py
app/blueprints/storage/: service.py
documentation/: auth.md
instance/: data.db
migrations/versions/: 2bbc8828856a_project_initialization.py  5cba0a903600_initial_migration.py  b5b8a271f681_fresh.py
tests/: conftest.py  test_authentication.py  test_files.py  test_register.py
tests/utils/: auth.py
